<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>kumonoito</name>
  <version>0.0.1</version>
  <description>
  This repository exemplifies Drake simulations and systems that communicate
  via ROS and LCM messages
  </description>

  <maintainer email="naveenoid@todo.todo">naveenoid</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ros_drake</build_depend>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- tf is only used in launch files -->
  <exec_depend>tf</exec_depend>

  <build_export_depend>ros_drake</build_export_depend>
</package>
